==> uzi18/circle-of-current/gps_logger/mmc.c <==
#include <avr/io.h>
#include "diskio.h"
#define CMD0	(0x40+0)	/* GO_IDLE_STATE */
#define CMD1	(0x40+1)	/* SEND_OP_COND (MMC) */
#define	ACMD41	(0xC0+41)	/* SEND_OP_COND (SDC) */
#define CMD8	(0x40+8)	/* SEND_IF_COND */
#define CMD9	(0x40+9)	/* SEND_CSD */
#define CMD10	(0x40+10)	/* SEND_CID */
#define CMD12	(0x40+12)	/* STOP_TRANSMISSION */
#define ACMD13	(0xC0+13)	/* SD_STATUS (SDC) */
#define CMD16	(0x40+16)	/* SET_BLOCKLEN */
#define CMD17	(0x40+17)	/* READ_SINGLE_BLOCK */
#define CMD18	(0x40+18)	/* READ_MULTIPLE_BLOCK */
#define CMD23	(0x40+23)	/* SET_BLOCK_COUNT (MMC) */
#define	ACMD23	(0xC0+23)	/* SET_WR_BLK_ERASE_COUNT (SDC) */
#define CMD24	(0x40+24)	/* WRITE_BLOCK */
#define CMD25	(0x40+25)	/* WRITE_MULTIPLE_BLOCK */
#define CMD55	(0x40+55)	/* APP_CMD */
#define CMD58	(0x40+58)	/* READ_OCR */
#define SELECT()	PORTB &= ~0b00001000		/* MMC CS = L */
#define	DESELECT()	PORTB |= 0b00001000		/* MMC CS = H */
#define SOCKPORT	PINB			/* Socket contact port */
#define SOCKWP		0x20			/* Write protect switch (PB5) */
#define SOCKINS		0x10			/* Card detect switch (PB4) */
#define xmit_spi(dat) 	SPDR=(dat); loop_until_bit_is_set(SPSR,SPIF)

static
void power_on (void)
{
	// edited // PORTE &= ~0x80;				/* Socket power ON */
	
	for (Timer1 = 3; Timer1; );	/* Wait for 30ms */
	// _delay_ms(30); // possible replacement

	/* Frank: This is where you need to initilize your SPI port */
	PORTB = 0b01011000; // edited by Frank
	DDRB  = 0b10111000; // edited by Frank

	SPCR = 0b01010000;			/* Initialize SPI port (Mode 0) */
	SPSR = 0b00000001;
}

static
void power_off (void)
{
	SELECT();				/* Wait for card ready */
	wait_ready();
	release_spi();

	SPCR = 0;				/* Disable SPI function */
	
	// edited
	//DDRB  = 0b11000000;		/* Disable drivers */
	//PORTB = 0b10110000;

	// edited // PORTE |=  0x80;			/* Socket power OFF */
	Stat |= STA_NOINIT;		/* Set STA_NOINIT */
}
