==> ChucVanLe/Thesis_STM32F4_ControlFlight/Sd Card/mmc.c <==
#include "diskio.h"
#include "ff.h"
#include "stm32f10x.h"
#define CMD0		(0x40+0)		/* GO_IDLE_STATE */
#define CMD1		(0x40+1)		/* SEND_OP_COND (MMC) */
#define ACMD41	(0xC0+41)	/* SEND_OP_COND (SDC) */
#define CMD8		(0x40+8)		/* SEND_IF_COND */
#define CMD9		(0x40+9)		/* SEND_CSD */
#define CMD10	(0x40+10)	/* SEND_CID */
#define CMD12	(0x40+12)	/* STOP_TRANSMISSION */
#define ACMD13	(0xC0+13)	/* SD_STATUS (SDC) */
#define CMD16	(0x40+16)	/* SET_BLOCKLEN */
#define CMD17	(0x40+17)	/* READ_SINGLE_BLOCK */
#define CMD18	(0x40+18)	/* READ_MULTIPLE_BLOCK */
#define CMD23	(0x40+23)	/* SET_BLOCK_COUNT (MMC) */
#define ACMD23	(0xC0+23)	/* SET_WR_BLK_ERASE_COUNT (SDC) */
#define CMD24	(0x40+24)	/* WRITE_BLOCK */
#define CMD25	(0x40+25)	/* WRITE_MULTIPLE_BLOCK */
#define CMD55	(0x40+55)	/* APP_CMD */
#define CMD58	(0x40+58)	/* READ_OCR */
#define SPI_SD                   			SPI1
#define GPIO_CS                  			GPIOA
#define GPIO_Pin_CS              			GPIO_Pin_4
#define RCC_APB2Periph_GPIO_CS   	RCC_APB2Periph_GPIOA
#define GPIO_SPI_SD              			GPIOA
#define GPIO_Pin_SPI_SD_SCK      			GPIO_Pin_5
#define GPIO_Pin_SPI_SD_MISO     			GPIO_Pin_6
#define GPIO_Pin_SPI_SD_MOSI     			GPIO_Pin_7
#define RCC_APBPeriph_SPI_SD     			RCC_APB2Periph_SPI1
#define SPI_BaudRateHighSpeed_SPI_SD		SPI_BaudRatePrescaler_4
#define SPI_BaudRateLowSpeed_SPI_SD  		SPI_BaudRatePrescaler_256
#define SELECT()				GPIO_ResetBits(GPIO_CS, GPIO_Pin_CS)

static
void power_on (void)
{

#ifdef SUPPORT_TIMEOUT
	for (Timer1 = 3; Timer1; );	/* Wait for 30ms */
#endif


	GPIO_InitTypeDef  GPIO_InitStructure;
	SPI_InitTypeDef   SPI_InitStructure;
	volatile BYTE dummyread;
	

	/* SPI Periph clock enable */
	RCC_APB2PeriphClockCmd(RCC_APBPeriph_SPI_SD, ENABLE);
	/* Configure SPI pins: SCK, MISO and MOSI */
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_SPI_SD_SCK | GPIO_Pin_SPI_SD_MOSI; 
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
	GPIO_Init(GPIO_SPI_SD, &GPIO_InitStructure);
	/* Configure MISO as Input with internal pull-up */
	GPIO_InitStructure.GPIO_Pin   = GPIO_Pin_SPI_SD_MISO;
	GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_IPU;
	GPIO_Init(GPIO_SPI_SD, &GPIO_InitStructure);

	/* Enable GPIO of CHIP SELECT */
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIO_CS, ENABLE);
	/* Configure CS pin */
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_CS;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_Init(GPIO_CS, &GPIO_InitStructure);

	DESELECT();

	/* SPI1 Config */
	SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
	SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
	SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
	SPI_InitStructure.SPI_CPOL = SPI_CPOL_High;
	SPI_InitStructure.SPI_CPHA = SPI_CPHA_2Edge;
	SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;
	SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRateHighSpeed_SPI_SD;
	SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
	SPI_InitStructure.SPI_CRCPolynomial = 7;
	SPI_Init(SPI_SD, &SPI_InitStructure);

	SPI_CalculateCRC(SPI_SD, DISABLE);

	/* SPI1 enable */
	SPI_Cmd(SPI_SD, ENABLE);

		/* drain SPI */
	while (SPI_I2S_GetFlagStatus(SPI_SD, SPI_I2S_FLAG_TXE) == RESET) { ; }
	dummyread = SPI_I2S_ReceiveData(SPI_SD);

}

static
void power_off (void)
{

	GPIO_InitTypeDef GPIO_InitStructure;

	if (!(Stat & STA_NOINIT)) {
		SELECT();
		wait_ready();
		release_spi();
	}

	SPI_Cmd(SPI_SD, DISABLE);
	SPI_I2S_DeInit(SPI_SD);

	RCC_APB1PeriphClockCmd(RCC_APBPeriph_SPI_SD, DISABLE);

	/* All SPI-Pins to input with weak internal pull-downs */
	GPIO_InitStructure.GPIO_Pin   = GPIO_Pin_SPI_SD_SCK | GPIO_Pin_SPI_SD_MISO | GPIO_Pin_SPI_SD_MOSI;  
	GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_IPD;
	GPIO_Init(GPIO_SPI_SD, &GPIO_InitStructure);

	Stat |= STA_NOINIT;		/* Set STA_NOINIT */

}
